added good looking css style to the top of page button
added good looking css style to the top of page button

--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ h3{
     transform: scaleX(1.5) scaleY(1.5);
 
 }
+#topbutton{
+    background: rgb(2, 71, 71);
+    padding : 3px;
+    
+}
 article{
     background: rgba(35, 48, 56, 0.3);
     padding: 15% 2% 5% 2%;
