--- a/style.css
+++ b/style.css
@@ -1,127 +1,77 @@
-*{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-body{
-    
-    color: rgba(105, 46, 46, 0.822);
-    margin: 2% 4% 1% 4%;
-    background: url('bg.jpg');
-    background-repeat: round;
-}
+document.addEventListener("contextmenu", function(e){
+    alert("Right click is disabled for safety..");
+    e.preventDefault();
 
-header nav ul{
-    list-style-type: none;
-    display :flex;
-     
-    padding: 0 2% 0 2%;
-}
-header nav{
-    position: fixed;
-}
-header nav ul li a{
-    text-decoration: none;
-    color: rgba(241, 255, 52, 0.822);
-    background-color: rgb(114, 2, 2);
-    border: 2px solid rgb(221, 213, 138);
-    padding: 10px 10px 10px 10px ; 
-    margin-left: 15px;
-    
-}
-header nav ul li a:hover{
-    color: red;
-    background: rgba(255, 255, 0, 0.582);
-}
-::-webkit-scrollbar{width: 7px;border-radius: 50%;}
-::-webkit-scrollbar-track {background: rgb(225, 253, 100); border-radius: 50%;}
-::-webkit-scrollbar-track:hover {background: #000000; border-radius: 35%;}
-::-webkit-scrollbar-thumb {background: rgb(6, 7, 0); border: 1px solid rgb(217, 255, 0);border-radius: 50%;}
-::-webkit-scrollbar-thumb:hover {background: rgb(171, 255, 102);border: 1px solid rgb(0, 0, 0);border-radius: 50%; }
-header nav ul li ul{
-    list-style-type: none;
-    display :none;
-}
-header nav ul li{
-    line-height: 50px; 
-}
-header nav ul li:hover{
-    color: yellow;  
-}
-div.img img{
-    border-radius: 15px;
-    width: 80%;
-}
-div#top{
-    float: right;
-}
-header nav ul li:hover ul{
-    list-style-type: none;
-    color: rgb(222, 247, 0);
-    display: inline-block;
-}
-header nav ul li ul li a:hover{
-    list-style-type: none;
-    color: rgb(68, 27, 214);
-    background-color: rgba(255, 252, 83, 0.4);
-}
-h1{
-    color: rgb(131, 0, 55);
-    text-align :center;
-}
-h3{
-    color: rgb(131, 0, 55);
-    text-align :left;
-}
-#full{
-    align-content: center;
+}, false);
 
-}
-.buttons{
-    color: rgba(163, 0, 0, 0.8);
-    background:rgb(236, 236, 110);
-
-}
-.buttons:hover{
-    color: rgba(240, 255, 104, 0.8);
-    background:rgb(0, 8, 117);
-    text-transform: uppercase;
-    transform: scaleX(1.2) scaleY(1.2);
-
-}
-#topbutton{
-    background: rgb(2, 71, 71);
-    padding : 3px;
-    
-}
-article{
-    background: linear-gradient(to right , rgba(35, 48, 56, 0.3) 5%,rgba(255, 0, 0, 0.192),rgba(255, 166, 0, 0.075),rgba(255, 255, 0, 0.13),rgba(0, 128, 0, 0.068),rgba(0, 0, 255, 0.11),rgba(76, 0, 130, 0.13),rgba(238, 130, 238, 0.199) );
-    
-    padding: 15% 2% 5% 2%;
-    color: rgba(252, 255, 47, 0.945);
-    z-index: 5;
-}
-
-footer {
-    background:linear-gradient(to right, rgb(2, 71, 71),rgba(177, 21, 21, 0.349),orange,yellow,green,blue,indigo,violet);
-    
-    padding : 3px;
-    color: rgba(247, 36, 36, 0.945);
-    text-align:center;
-}
-#top {
-	
-	position: fixed;
-	bottom: 20px;
-	right: 30px;
-	z-index: 5;
-	font-size: 18px;
-	border: none;
-	outline: aqua;
-	color: white;
-	cursor: alias;
-	padding: 15px;
-	border-radius: 4px;
+document.onkeydown = function(e) {
+    if(event.keyCode == 123) {
+        alert("you are not allowed to do so.");
+        return false;
+    }
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        alert("you are not allowed to do so.");
+        return false;
+    }
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+        alert("you are not allowed to do so.");
+        return false;
+    }
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+        alert("you are not allowed to do so.");
+        return false;
+    }
+    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        alert("you are not allowed to do so.");
+        return false;
+    }
   }
-footer a{text-decoration: none;
-    color: rgb(229, 245, 82);
 
+function big(n){
+    if (document.body.style.fontSize == "") {
+    document.getElementById('body').style.fontSize = "1.0em";
+    }
+    document.getElementById('body').style.fontSize = parseFloat(document.body.style.fontSize) + (n * 0.2) + "em";
+}
+
+function gofullscreen(){
+    if (document.fullscreenEnabled || document.mozRequestFullScreen || document.webkitRequestFullscreen || document.msRequestFullscreen){
+        // fullscreen is activated
+        alert("For exiting Full screen please press F11 or Esc or back key");
+        document.getElementById('full').innerHTML = "Exit Full Screen";
+        
+        document.documentElement.requestFullscreen();
+        document.documentElement.mozRequestFullScreen();
+        document.documentElement.webkitRequestFullscreen();
+        document.documentElement.msRequestFullscreen();
+    } else{
+        // fullscreen is cancelled
+        if (document.fullscreenEnabled != true) {
+            
+            document.Exitfull();
+        }
+        
+    }
+    
+}
+
+
+
+
+
+function gototop() {
+    
+    window.onscroll = function() {scrollFunction()};                   
+    function scrollFunction() {
+        if (document.body.scrollTop > 15 || document.documentElement.scrollTop > 15) {
+            document.getElementById("top").style.display = "block";
+        }else {
+        document.getElementById("top").style.display = "none";
+    }
+
+
+}
+
+document.body.scrollTop = 0;
+document.documentElement.scrollTop = 0;
 }
